# spatialai_tutorial

./: .gitignore  .gitmodules  README.md  graphviz.txt
Cpp/: CppForSpatialAI.md  ModernCppEssentials.md  README.md
Cpp/01_variables/: main  main.cpp
Cpp/02_functions/: main  main.cpp
Cpp/03_header_files/: Log.cpp  Log.h  main  main.cpp
Cpp/04_conditions/: main  main.cpp
Cpp/05_loops/: main  main.cpp
Cpp/06_control_flow/: main  main.cpp
Cpp/07_pointers/: main  main.cpp
Cpp/08_references/: main  main.cpp
Cpp/09_class_structs/: main  main.cpp
Cpp/10_class_design/: main  main.cpp
Cpp/11_static/: main  main.cpp  static.cpp
Cpp/12_enums/: main  main.cpp
Cpp/13_constructors_descturcotrs/: main  main.cpp
Cpp/14_inheritance/: main  main.cpp
Cpp/15_virtual_functions/: main.cpp
Cpp/16_interfaces/: main  main.cpp
Cpp/17_visibility/: main  main.cpp
Cpp/18_arrays/: main  main.cpp
Cpp/19_strings/: main  main.cpp
Cpp/20_string_literals/: main  main.cpp
Cpp/21_const/: main  main.cpp
Cpp/22_mutable/: main  main.cpp
Cpp/23_constructor_initializer_list/: main  main.cpp
Cpp/24_ternary_operators/: main  main.cpp
Cpp/25_instantiate_objects/: main  main.cpp
Cpp/26_new/: main  main.cpp
Cpp/27_implicit_explicit/: main  main.cpp
Cpp/28_operators_overloading/: main  main.cpp
Cpp/29_this/: main  main.cpp
Cpp/30_object_lifetime/: main  main.cpp
Cpp/31_smart_pointers/: main  main.cpp
Cpp/32_copy_constructors/: main  main.cpp
Cpp/33_arrow/: main  main.cpp
Cpp/34_dynamic_array/: main  main.cpp
Cpp/35_vector_optimization/: main  main.cpp
Cpp/36_local_static/: main  main.cpp
Cpp/37_libraries/: dynamic.cpp  main.cpp
Cpp/38_multiple_returns/: main  main.cpp
Cpp/39_templates/: main  main.cpp
Cpp/40_stack_heap/: main  main.cpp
Cpp/41_macros/: main  main.cpp
Cpp/42_auto/: main  main.cpp
Cpp/43_static_arrays/: main  main.cpp
Cpp/44_function_pointers/: main  main.cpp
Cpp/45_lambdas/: main  main.cpp
Cpp/46_using_namespace_std/: main.cpp
Cpp/47_namespaces/: main.cpp
Cpp/48_threads/: main.cpp
Cpp/49_timing/: main.cpp
Cpp/50_multidimensionaly_arrays/: main.cpp
Cpp/51_sorting/: main.cpp
Cpp/52_type_pruning/: main.cpp
Cpp/53_unions/: main.cpp
Cpp/54_virtual_destructors/: main.cpp
Cpp/55_casting/: main.cpp
Cpp/56_contional_action_breakpoints/: main.cpp
Cpp/57_safety/: main.cpp
Cpp/58_precompiled_headers/: main.cpp  pch.h  pcl.cpp
Cpp/59_dynamic_casting/: main.cpp
Cpp/60_benchmarking/: Instrumentor.h  main.cpp
Cpp/61_structured_bindings/: main.cpp
Cpp/62_optional_data/: data.txt  main.cpp
Cpp/63_multiple_data/: main.cpp
Cpp/64_store_any_data/: main.cpp
Cpp/65_multithreading_async/: main.cpp
Cpp/66_string_performance/: main.cpp
Cpp/67_visual_benchmarking/: main.cpp  results.json
Cpp/68_singletons/: Random.cpp  main.cpp
Cpp/69_small_string_optimization/: main.cpp
Cpp/70_track_memory_allocations/: main.cpp
Cpp/71_lvalues_rvalues/: main.cpp
Cpp/72_contiguous_integration/: main.cpp
Cpp/73_static_analysis/: main.cpp
Cpp/74_argument_evaluation_order/: main.cpp
Cpp/75_move_Semantics/: main.cpp
Cpp/76_move_assignment_operator/: main.cpp
Cpp/77_array_data_structures/: array.cpp  main.cpp
Cpp/78_vector_data_structures/: Vector.h  main.cpp
Cpp/79_iterators/: main.cpp
Cpp/80_iterators_from_scratch/: Vector.h  main.cpp
Cpp/cpp_project/: cpp_project.sln
Diffusion/: 02_GAN_VAE.md  03_DDPM.md  04_DDIM.md  05_Diffusion_Applications.md  06_DDIM_Inversion.md  07_Score_Distillation.md  08_Diffusion_Sync.md  09_Inverse_problems.md
Docker/: Docker101.md  DockerForSpatialAI.md  DockerfileTemplates.md  README.md
SLAM/Frontend/01_CMake_ninja/: CMakeLists.txt  CMake_and_Ninja_Tutorial.md
SLAM/Frontend/01_CMake_ninja/include/: MyLibrary.h
SLAM/Frontend/01_CMake_ninja/src/: MyLibrary.cpp  another_main.cpp  main.cpp
SLAM/Frontend/02_3d_rigid_transformation/: README.md
SLAM/Frontend/02_3d_rigid_transformation/01_Eigen/: CMakeLists.txt  main.cpp
SLAM/Frontend/02_3d_rigid_transformation/02_Eigen_geometry/: CMakeLists.txt  main.cpp
SLAM/Frontend/02_3d_rigid_transformation/03_Eigen_transform/: CMakeLists.txt  main.cpp
SLAM/Frontend/03_Lie_algebra/01_Group_algebra_mapping/: CMakeLists.txt  main.cpp
SLAM/Frontend/03_Lie_algebra/02_Perturbation_model/: CMakeLists.txt  main.cpp
SLAM/Frontend/03_Lie_algebra/03_Sophus/: CMakeLists.txt  main.cpp
SLAM/Frontend/04_Camera_images/01_Coordinate_systems/: CMakeLists.txt  main.cpp
SLAM/Frontend/04_Camera_images/02_Distortion/: CMakeLists.txt  main.cpp
SLAM/Frontend/04_Camera_images/03_Stereo_vision/: CMakeLists.txt  main.cpp
code_analysis/: gsplat_rasterization.md  nerfstudio.md  splatfacto.md
openMP/: README.md
openMP/01_HelloOpenMP/: README.md
openMP/01_HelloOpenMP/01_HelloOpenMP/: HelloOpenMP  HelloOpenMP.cpp
openMP/02_ParallelConstruct/: README.md
openMP/02_ParallelConstruct/01_VectorSum/: VectorSum  VectorSum.cpp
openMP/02_ParallelConstruct/02_VectorSumIf/: VectorSumIf  VectorSumIf.cpp
openMP/03_WorkSharingConstructs/01_LoopConstruct/: LoopConstruct  LoopConstruct.cpp
openMP/03_WorkSharingConstructs/02_LoopConstructIncements/: LoopConstructIncements  LoopConstructIncements.cpp
openMP/03_WorkSharingConstructs/03_LoopConstructDependency/: LoopConstructDependency  LoopConstructDependency.cpp
openMP/03_WorkSharingConstructs/04_LoopConstuctImplicitBarrier/: LoopConstuctImplicitBarrier  LoopConstuctImplicitBarrier.cpp
openMP/03_WorkSharingConstructs/05_SectionsConstruct/: SectionsConstruct  SectionsConstruct.cpp
openMP/03_WorkSharingConstructs/06_SingleConstruct/: SingleConstruct  SingleConstruct.cpp
openMP/03_WorkSharingConstructs/07_CombinedWorkSharingConstructs/: CombinedWorkSharingConstructs  CombinedWorkSharingConstructs.cpp
openMP/03_WorkSharingConstructs/08_NoWaitClause/: NoWaitClause  NoWaitClause.cpp
openMP/04_ScopeOfVariables/01_ScopeOfVariables/: ScopeOfVariable  ScopeOfVariable.cpp
openMP/04_ScopeOfVariables/02_SharedClause/: SharedClause  SharedClause.cpp
toys/simulation/: PyBullet.py
(+42 files in other folders)
